--- a/index.html
+++ b/index.html
@@ -88,21 +88,23 @@
       }
       
       #midWholePart121 h1{
-        width: fit-content;
-        background-color: #466c50;
         color: white;
         font-weight: 100;
+        padding-right: 0.5em;
+      }
+      #midWholePart121{
+        display: flex;
+        background-color: #466c50;
         border-radius: 2em;
-        padding: 0.4em 0.5em;
+        padding: 0.4em 1.4em;
         margin-left: 2em;
+        width: fit-content;
+        align-items: center;
       }
-      #midWholePart121 h1::after{
-        content: ' >';
-        padding-left: 0.4em;
-        font-weight: bold;
-        font-size: 1.2em;
+      #midWholePart121 img{
+        position: relative;
+        top: 3px;
       }
-      
       #midWholePart13{
         display: flex;
         margin: 5em 0em 4em 3em ;
